# rpi-pico-rust-demo

./: Cargo.toml
.cargo/: config
scripts/: flash-pico  flash-pico-rs-elf
src/: 1.rs  hash.rs  lib.rs  rng.rs
